# EllipticPDEwithOpenMP

./: CMakeLists.txt  Performance plots for Elliptic PDE Solver using OpenMP.docx  PlotsData.xlsx  README.md  cluster.sh  rbgs  script.sh  scriptForCluster.sh
include/: PDE.hpp  type.hpp
src/: PDE.cc
test/: main.cc
